[package]
name = "rmap"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.2", features = ["cargo"] }
colored = "2.1.0"
rand = "0.8.5"
tokio = "1.35.1"
tz-rs = "0.6.14"
